--- a/locale/ar/LC_MESSAGES/django.po
+++ b/locale/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-10-13 19:45+0400\n"
+"POT-Creation-Date: 2008-10-13 15:16-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -64,7 +64,7 @@ msgstr ""
 msgid "Добавить пост"
 msgstr "أضف بوست"
 
-#: blog/templates/post_add.html:8
+#: blog/templates/post_add.html:8 photo/templates/album_create.html:11
 msgid "Cоздать"
 msgstr "خلق"
 
@@ -1329,11 +1329,19 @@ msgstr "إعلانات"
 msgid "Написать"
 msgstr "البريد"
 
-#: net/templates/ads_widget.html:23 net/templates/messages_widget.html:45
-#: net/templates/wall_widget.html:20
+#: net/templates/ads_widget.html:23 net/templates/wall_widget.html:20
 #, python-format
 msgid "Еще %(count)s сообщений"
 msgstr ""
+
+#: net/templates/ads_widget.html:36
+msgid "У вас нет обьявлений,"
+msgstr ""
+
+#: net/templates/ads_widget.html:36
+#, fuzzy
+msgid "добавьте"
+msgstr "أضف صورة"
 
 #: net/templates/base.html:7
 msgid "RT TV"
@@ -1342,6 +1350,15 @@ msgstr "RT TV"
 #: net/templates/base.html:81
 msgid "Я"
 msgstr "أنا"
+
+#: net/templates/base.html:82
+msgid "Люди"
+msgstr ""
+
+#: net/templates/base.html:84
+#, fuzzy
+msgid "Группы"
+msgstr "جميع المجموعات"
 
 #: net/templates/base.html:89
 msgid "Выйти"
@@ -1372,9 +1389,13 @@ msgstr "حتى الآن لم يحدث شيء."
 msgid "Друзья"
 msgstr "أصدقاء"
 
-#: net/templates/friends_widget.html:28 net/templates/friends_widget.html:36
+#: net/templates/friends_widget.html:28 net/templates/friends_widget.html:37
 msgid "У вас нет друзей, попробуйте их найти"
 msgstr "ليس لديك أصدقاء ، في محاولة للعثور عليهم"
+
+#: net/templates/friends_widget.html:31
+msgid "У пользователя нет друзей, но его"
+msgstr ""
 
 #: net/templates/friends_widget.html:32
 msgid "можно добавить"
@@ -1428,9 +1449,19 @@ msgstr "من :"
 msgid "Cообщения"
 msgstr "أخبار"
 
+#: net/templates/messages_widget.html:45
+#, fuzzy, python-format
+msgid " Еще %(count)s сообщений "
+msgstr "رسالة خاصة"
+
 #: net/templates/messages_widget.html:50
 msgid "История моих сообщений"
 msgstr "تاريخ بلادي رسائل"
+
+#: net/templates/messages_widget.html:58
+#, fuzzy
+msgid "У вас нет сообщений"
+msgstr "رسالة خاصة"
 
 #: net/templates/messages_widget.html:60
 msgid "Отправить личное сообщение"
@@ -1493,8 +1524,9 @@ msgid "Телефон:"
 msgstr "هاتف"
 
 #: net/templates/wall_create.html:9
-msgid "رسالة شخصية"
-msgstr ""
+#, fuzzy
+msgid "Личное сообщение"
+msgstr "رسالة خاصة"
 
 #: net/templates/wall_create.html:11
 msgid "Сообщение на Стену"
@@ -1532,6 +1564,10 @@ msgstr "جدار"
 msgid "Стена пуста"
 msgstr "جدار فارغ"
 
+#: net/templates/wall_widget.html:28
+msgid "Найдите друзей, и они вам что-нибудь напишут"
+msgstr ""
+
 #: net/templates/wall_widget.html:31
 msgid "попробуйте сами"
 msgstr "جرب بنفسك"
@@ -1541,10 +1577,12 @@ msgid "Написать на стене пользователя"
 msgstr "الكتابة على الجدار للمستخدم"
 
 #: net/templates/registration/login.html:7
+#: net/templates/registration/registration_form.html:26
 msgid "Уже зарегистрированы?"
 msgstr "سجلت بالفعل؟"
 
 #: net/templates/registration/login.html:12
+#: net/templates/registration/registration_form.html:30
 msgid "войти"
 msgstr "يذهب"
 
@@ -1561,6 +1599,52 @@ msgstr "شكرا لاستخدام خدماتنا."
 msgid "Войти снова"
 msgstr "اشترك الآن"
 
+#: net/templates/registration/registration_complete.html:6
+msgid "Спасибо!"
+msgstr ""
+
+#: net/templates/registration/registration_complete.html:7
+msgid ""
+"На ваш email придет письмо со ссылкой, перейдя по которой вы сможете "
+"продолжить регистрацию. Если письмо все-таки е пришло, попробуйте ввести "
+"email еще раз или написать в нашу службу поддержки"
+msgstr ""
+
+#: net/templates/registration/registration_form.html:8
+msgid ""
+"\n"
+"                <h2>RTTV Social это новая социальная сеть где вы можете</"
+"h2>\n"
+"                <ul>\n"
+"                <li>&mdash;&nbsp;Общаться с друзьями</li>\n"
+"                <li>&mdash;&nbsp;Находить своих старых знакомых, "
+"одноклассников, коллег</li>\n"
+"                <li>&mdash;&nbsp;Загружать, показывать и комментровать "
+"фотографии</li>\n"
+"                <li>&mdash;&nbsp;Вести дневник</li>\n"
+"                <li>&mdash;&nbsp;Размещать обьявления</li>\n"
+"                </ul>"
+msgstr ""
+
+#: net/templates/registration/registration_form.html:18
+#, fuzzy
+msgid "Зарегистрироваться:"
+msgstr "سجلت بالفعل؟"
+
+#: net/templates/registration/registration_form.html:21
+msgid ""
+"Мы бережно храним ваш email в соответствии с &laquo;<a href=\"#\">Условиями "
+"о хранении персональной информации</a>&raquo;"
+msgstr ""
+
+#: net/templates/registration/registration_form.html:27
+msgid "E-mail"
+msgstr ""
+
+#: net/templates/registration/registration_form.html:28
+msgid "Пароль"
+msgstr ""
+
 #: photo/forms.py:21
 msgid "Новый альбом"
 msgstr "الألبوم الجديد"
@@ -1574,6 +1658,15 @@ msgstr ""
 msgid "Album is required."
 msgstr "الألبوم هو المطلوب"
 
+#: photo/templates/album_create.html:5
+msgid "У вас еще нет ни одного альбома"
+msgstr ""
+
+#: photo/templates/album_create.html:9
+#, fuzzy
+msgid "Название:"
+msgstr "المفكرة"
+
 #: photo/templates/photo_albums.html:20 photo/templates/photo_photo.html:19
 #: photo/templates/photo_photos.html:6
 msgid "Добавить фото"
@@ -1582,6 +1675,25 @@ msgstr "أضف صورة"
 #: photo/templates/photo_create.html:6
 msgid "Добавить фотографии"
 msgstr "أضف صور"
+
+#: photo/templates/photo_create.html:10
+msgid "выберите альбом или группу"
+msgstr ""
+
+#: photo/templates/photo_create.html:11
+#, fuzzy
+msgid "создайте новый альбом:"
+msgstr "الألبوم الجديد"
+
+#: photo/templates/photo_create.html:16
+#, fuzzy
+msgid "выберите фотографии:"
+msgstr "احصل على الصورة"
+
+#: photo/templates/photo_create.html:24
+#, fuzzy
+msgid "Загрузить"
+msgstr "أصدقاء"
 
 #: wall/models.py:8
 msgid "From"
